[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.7"
clap = { version = "4.4.8", features = ["derive"] }
actix-web = "4"
awc = "3.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.3", features = ["sync"] }
url = "2.2"
log = "0.4"
pretty_env_logger = "0.4"
